add interview duration and exceptions where overlapping